--- a/templates/base.html
+++ b/templates/base.html
@@ -29,30 +29,45 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="my-nav">
                   <ul class="nav navbar-nav">
-                    {% block topbar %}
-                    {% endblock %}
+<!--                     {% block topbar %}
+                    {% endblock %} -->
                   </ul>
                   <ul class="nav navbar-nav navbar-right">
-                      {% if request.session.islogin %}
-                          <li><a class="fa fa-user" href="#"> {{ request.session.username }}</a></li>
-                          <li><a class="fa fa-sign-out" href="/logout/"> Sign out</a></li>
-                      {% else %}
-                          <li><a href="/login/">Sign in</a></li>
-                          <li><a href="/register/">Register</a></li>
-                      {% endif %}
+                      <li class="dropdown">
+                        <a href="#" class="fa fa-user dropdown-toggle" id="moret" data-toggle="dropdown" role="button" aria-hapopup="true" aria-expanded="false">
+                          {% if request.session.islogin %}
+                          {{ request.session.username }}
+                          {% else %}s
+                          Sign in
+                          {% endif %}
+                          <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li><a a class="fa fa-cog" href="/settings/">&nbsp; Settings</a></li>
+                          <li role="separator" class="divider"></li>
+                          <li><a class="fa fa-sign-out" href="/logout/">&nbsp; Sign out</a></li>
+                        </ul>
+                      </li>
                   </ul>
                 </div><!-- /.navbar-collapse -->
               </div><!-- /.container-fluid -->
             </nav><!-- /navbar -->
     </div>
 </div>
+<div class="container-fluid">
 <div class="row" style="margin-right:1px; margin-left: 1px">
-    <div class="col-md-12">
+
+<div class="col-xs-2 list-group">
+  {% block sidebar %}
+  {% endblock %}
+</div>
+    <div id="body" class="col-xs-10">
         {% block hovor %}
         {% endblock %}
         {% block body %}
         {% endblock %}
     </div>
+</div>
 </div>
 </body>
 </html>
