--- a/templates/docker_server.html
+++ b/templates/docker_server.html
@@ -1,72 +1,111 @@
 {% extends "base.html" %}
 
-{% block topbar %}
-<li class="active"><a href="/dockerserver/">Docker Server</a></li>
-<li ><a href="/supervisorserver/">Supervisor Server</a></li>
-<li><a href="/jenkinsserver/">Jenkins Server</a></li>
-<li ><a href="/dirviewer/">Dir Viewer</a></li>
-<li ><a href="/actionslog/">Actions Log</a></li>
+{% block sidebar %}
+  <a class="list-group-item active" href="/dockerserver/">Docker Server</a>
+  <a class="list-group-item" href="/supervisorserver/">Supervisor Server</a>
+  <a class="list-group-item" href="/jenkinsserver/">Jenkins Server</a>
+  <a class="list-group-item" href="/dirviewer/">Directory Viewer</a>
+  <a class="list-group-item" href="/actionslog/">Action Log</a>
+  <a class="list-group-item" href="/settings/">Settings</a>
 {% endblock %}
 
 {% block body %}
+
+<ol class="breadcrumb">
+  <li><a href="#">Home</a></li>
+  <li class="active">Docker Server</li>
+</ol>
+
 <div class="page-header">
-    <h1>
-        <small>controlled by docker</small>
-    </h1>
+    <h2>
+        Controlled by docker
+    </h2>
 </div>
 
-{% for server in server_all_list %}
-<h2>
-    <small>Server: {{server.ip}} </small>
-</h2>
-<table class="table">
+<table class="table table-hover">
+<caption>
+<form class="form-inline" style="float: right;" action="/index/" method="post">
+ {% csrf_token %}
+  <div class="form-group">
+    <p class="form-control-static">
+        <select class="form-control">
+          <option>status</option>
+          <option>app</option>
+          <option>location</option>
+        </select>
+    </p>
+    <input type="text" class="form-control" id="inputstring" placeholder="">
+  </div>
+  <button type="submit" class="btn btn-default">Filter</button>
+  <div class="btn-group">
+  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    More Actions <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu dropdown-menu-right">
+    <li><a href="#">start</a></li>
+    <li><a href="#">stop</a></li>
+    <li><a href="#">restart</a></li>
+    <li role="separator" class="divider"></li>
+    <li><a href="#">other</a></li>
+  </ul>
+</div>
+</form>
+</caption>
+    <tr>
+        <td colspan="12" data-column="0">
+            <span class="table_count">Displaying {{ container_count }} items</span>
+        </td>
+    </tr>
     <tr class="active">
+        <th><input type="checkbox"></th>
         <th width="10%">status</th>
         <th width="30%">app</thw>
         <th width="20%">location</th>
         <th width="25%">description</th>
         <th colspan="4" width="15%">operation</th>
     </tr>
-    {% for container in server.containers %}
+    {% for container in container_list %}
     <tr>
         <td>
-            {% if container.status == 'running' %}
-                <span style="background-color: #E0E0E0">
-                 {% elif container.status == 'exited' %}
-                <span style="background-color: #C0C0C0">
-                 {% else %}
-                <span>
-                    {% endif %}
-                    {{container.status|lower}}
-                </span>
+            <input type="checkbox">
+        </td>
+        <td style="text-transform:capitalize;">
+            {{container.status|lower}}
         </td>
         <td>{{container.name}}</td>
-        <td>{{server.ip}}</td>
+        <td>{{container.host_ip}}</td>
         <td>{{container.apistatus|lower}}</td>
         <td>
-            <a style="text-decoration:underline; color:inherit;" href="#" onclick="container_opt('{{server.ip}}', '{{server.port}}' , '{{container.id}}', '{{container.name}}', 'start')">
+            <a style="text-decoration:underline; color:inherit;" href="/container_opt/?server_ip={{container.host_ip}}&server_port={{container.host_port}}&container_id={{container.id}}&container_name={{container.name}}&container_opt=start">
                 start
             </a>
         </td>
         <td>
-            <a style="text-decoration:underline; color:inherit;" href="#" onclick="container_opt('{{server.ip}}', '{{server.port}}',  '{{container.id}}', '{{container.name}}', 'restart')">    
+            <a style="text-decoration:underline; color:inherit;" href="/container_opt/?server_ip={{container.host_ip}}&server_port={{container.host_port}}&container_id={{container.id}}&container_name={{container.name}}&container_opt=restart">   
                 restart
             </a>
         </td>
         <td>
 
-            <a style="text-decoration:underline; color:inherit;" href="#" onclick="container_opt('{{server.ip}}', '{{server.port}}',  '{{container.id}}', '{{container.name}}', 'stop')">
+            <a style="text-decoration:underline; color:inherit;" href="/container_opt/?server_ip={{container.host_ip}}&server_port={{container.host_port}}&container_id={{container.id}}&container_name={{container.name}}&container_opt=stop">
                 stop
             </a>
         </td>
         <td>
-            <a style="text-decoration:underline; color:inherit;" href="/tail_container_log/?server_ip={{server.ip}}&server_port={{server.port}}&container_id={{container.id}}">
+            <a style="text-decoration:underline; color:inherit;" href="/tail_container_log/?server_ip={{container.host_ip}}&server_port={{container.host_port}}&container_id={{container.id}}">
                 tail
             </a>
         </td>
 
     </tr>
     {% endfor %}
+    <tr>
+        <td colspan="12" data-column="0">
+            <span class="table_count">Displaying {{ container_count }} items</span>
+        </td>
+    </tr>
+
 </table>
-{% endfor %}
+
+
 {% endblock %}
