--- a/templates/action_log.html
+++ b/templates/action_log.html
@@ -28,7 +28,7 @@
 <table class="table">
     <tr>
         <td colspan="12" data-column="0">
-            <span class="table_count">Displaying {{ action_log_count }} items</span>
+            <span class="table_count">Displaying 10 / {{ action_log_count }} items</span>
         </td>
     </tr>
     <tr class="active">
