--- a/templates/jenkins_server.html
+++ b/templates/jenkins_server.html
@@ -30,7 +30,7 @@
     <p class="form-control-static">
         <select class="form-control">
           <option>status</option>
-          <option>app</option>
+          <option  selected="selected">app</option>
           <option>location</option>
         </select>
     </p>
