--- a/templates/docker_server.html
+++ b/templates/docker_server.html
@@ -24,17 +24,17 @@
 
 <table class="table table-hover">
 <caption>
-<form class="form-inline" style="float: right;" action="/index/" method="post">
+<form class="form-inline" style="float: right;" action="/dockerserver/" method="post">
  {% csrf_token %}
   <div class="form-group">
     <p class="form-control-static">
-        <select class="form-control">
+        <select class="form-control" name="filter_select">
           <option>status</option>
-          <option>app</option>
+          <option  selected="selected">app</option>
           <option>location</option>
         </select>
     </p>
-    <input type="text" class="form-control" id="inputstring" placeholder="">
+    <input type="text" class="form-control" name="filter_keyword" placeholder="">
   </div>
   <button type="submit" class="btn btn-default">Filter</button>
   <div class="btn-group">
