--- a/templates/docker_server.html
+++ b/templates/docker_server.html
@@ -29,9 +29,9 @@
   <div class="form-group">
     <p class="form-control-static">
         <select class="form-control" name="filter_select">
-          <option>status</option>
-          <option  selected="selected">app</option>
-          <option>location</option>
+          <option>Status =</option>
+          <option  selected="selected">App</option>
+          <option>Location</option>
         </select>
     </p>
     <input type="text" class="form-control" name="filter_keyword" placeholder="">
@@ -42,11 +42,11 @@
     More Actions <span class="caret"></span>
   </button>
   <ul class="dropdown-menu dropdown-menu-right">
-    <li><a href="#">start</a></li>
-    <li><a href="#">stop</a></li>
-    <li><a href="#">restart</a></li>
+    <li><a href="#">Restart Container</a></li>
+    <li><a href="#">Start Container</a></li>
+    <li><a href="#">Stop Container</a></li>
     <li role="separator" class="divider"></li>
-    <li><a href="#">other</a></li>
+    <li><a href="#">Other</a></li>
   </ul>
 </div>
 </form>
@@ -58,11 +58,11 @@
     </tr>
     <tr class="active">
         <th><input type="checkbox"></th>
-        <th width="10%">status</th>
-        <th width="30%">app</thw>
-        <th width="20%">location</th>
-        <th width="25%">description</th>
-        <th colspan="4" width="15%">operation</th>
+        <th width="10%">Status</th>
+        <th width="30%">App</thw>
+        <th width="20%">Location</th>
+        <th width="25%">Description</th>
+        <th colspan="4" width="15%">Actions</th>
     </tr>
     {% for container in container_list %}
     <tr>
@@ -76,25 +76,21 @@
         <td>{{container.host_ip}}</td>
         <td>{{container.apistatus|lower}}</td>
         <td>
-            <a style="text-decoration:underline; color:inherit;" href="/container_opt/?server_ip={{container.host_ip}}&server_port={{container.host_port}}&container_id={{container.id}}&container_name={{container.name}}&container_opt=start">
-                start
-            </a>
-        </td>
-        <td>
-            <a style="text-decoration:underline; color:inherit;" href="/container_opt/?server_ip={{container.host_ip}}&server_port={{container.host_port}}&container_id={{container.id}}&container_name={{container.name}}&container_opt=restart">   
-                restart
-            </a>
-        </td>
-        <td>
+          
+          <!-- Split button -->
+          <div class="btn-group">
+            <a type="button" class="btn btn-default btn-sm" href="javascript:void(0);" onclick="container_opt('{{container.host_ip}}','{{container.host_port}}','{{container.id}}','{{container.name}}','restart')">Restart</a>
+            <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu dropdown-menu-right">
+              <li><a href="javascript:void(0);" onclick="container_opt('{{container.host_ip}}','{{container.host_port}}','{{container.id}}','{{container.name}}','start')">Start Container</a></li>
+              <li><a href="javascript:void(0);" onclick="container_opt('{{container.host_ip}}','{{container.host_port}}','{{container.id}}','{{container.name}}','stop')">Stop Container</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="/tail_container_log/?server_ip={{container.host_ip}}&server_port={{container.host_port}}&container_id={{container.id}}" target="_blank">Tail Log</a></li>
+            </ul>
+          </div>
 
-            <a style="text-decoration:underline; color:inherit;" href="/container_opt/?server_ip={{container.host_ip}}&server_port={{container.host_port}}&container_id={{container.id}}&container_name={{container.name}}&container_opt=stop">
-                stop
-            </a>
-        </td>
-        <td>
-            <a style="text-decoration:underline; color:inherit;" href="/tail_container_log/?server_ip={{container.host_ip}}&server_port={{container.host_port}}&container_id={{container.id}}">
-                tail
-            </a>
         </td>
 
     </tr>
